[package]
name = "hotpotai"
version = "1.0.0"
description = "AI tools for graphic design image editing, and copywriting"
authors = ["XXIV"]
homepage = "https://github.com/thechampagne/hotpotai-rust"
repository = "https://github.com/thechampagne/hotpotai-rust"
keywords = ["pictures", "media", "entertainment", "photos", "api"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
